finsih writing the media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="card">
           <div class="calculator-input-container">
             <label class="bill-label" for="bill">Bill</label>
-            <input class="bill-input" id="bill" type="text" placeholder="0" />
+            <input class="bill-input" id="bill" type="number" placeholder="0" />
 
             <p class="tip-text">Select Tip %</p>
             <div class="tip-container">
@@ -33,7 +33,7 @@
               <button class="tip-btn" value="15">15%</button>
               <button class="tip-btn" value="25">25%</button>
               <button class="tip-btn" value="50">50%</button>
-              <input class="custom-tip" type="text" placeholder="Custom" />
+              <input class="custom-tip" type="numbrt" placeholder="Custom" />
             </div>
 
             <div class="wrapper-text">
@@ -43,7 +43,7 @@
             <input
               class="people-input"
               id="people"
-              type="text"
+              type="number"
               placeholder="0"
             />
           </div>
